--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,9 @@
 header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
     background: var(--white);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    position: fixed;
     width: 100%;
     z-index: 1000;
 }
@@ -48,4 +50,8 @@ nav ul li a:hover {
     font-size: 1.5rem;
     cursor: pointer;
     color: var(--primary);
+}
+
+.nav-links {
+    margin-top: -16px;
 }
